--- a/src/index.css
+++ b/src/index.css
@@ -90,9 +90,16 @@
 .playing-card {
     width: 70mm; 
     height: 97mm;
+}
+
+.playing-card-front {
     box-shadow: inset 0 0 1em gray;
     border-radius: 0.5em;
     border-width: 0.15em;
+}
+
+.playing-card-reverse {
+    border: none;
 }
 
 @media print
